# penumbra

./: Cargo.toml  README.md
.github/workflows/: tui_build.yml
core/src/: device.rs  error.rs
core/src/connection/: mod.rs  port.rs
core/src/connection/backend/: libusb_backend.rs
core/src/core/: devinfo.rs  seccfg.rs
core/src/core/auth/: local_keyring.rs  mod.rs  sla.rs
core/src/da/: dafile.rs  protocol.rs
core/src/da/xflash/: cmds.rs  da_protocol.rs  exts.rs  flash.rs  mod.rs  sec.rs  xflash.rs  xflash_lib.rs
core/src/da/xml/: cmds.rs  da_protocol.rs  exts.rs  flash.rs  mod.rs  patch.rs  sec.rs  xml_lib.rs
core/src/exploit/: carbonara.rs  heapbait.rs  mod.rs
core/src/utilities/: mod.rs  patching.rs  xml.rs
core/xmlcmd_derive/src/: lib.rs
docs/: quartz.config.ts
docs/content/: index.md
docs/content/Mediatek/Common/DA/: XFlash DA Protocol.md  XML DA Protocol.md
docs/content/Penumbra/Antumbra/: CLI.md  TUI.md
tui/: Cargo.toml  build.rs
tui/res/windows/: manifest.xml
tui/src/: app.rs  config.rs  logger.rs  macros.rs  main.rs
tui/src/cli/: mod.rs
tui/src/cli/commands/: erase.rs  format.rs  mod.rs  xflash.rs
tui/src/cli/helpers/: progress_bar.rs
tui/src/components/: blinking_stars.rs  description_menu.rs  dialog.rs  dropdown.rs  file_explorer.rs  mod.rs  progress_bar.rs  selectable_list.rs
tui/src/pages/: device.rs  welcome.rs
tui/src/themes/: gruvbox.rs  mod.rs  rose_pine.rs
